defconfig: gyro wake option
Signed-off-by: Bryan Smith <zarboz@gmail.com>

--- a/arch/arm/configs/m7_sense_defconfig
+++ b/arch/arm/configs/m7_sense_defconfig
@@ -1842,6 +1842,7 @@ CONFIG_SENSORS_R3GD20=y
 CONFIG_BOSCH_BMA250=y
 # CONFIG_BOSCH_BMA250_ENABLE_INT1 is not set
 # CONFIG_BOSCH_BMA250_ENABLE_INT2 is not set
+CONFIG_BMA250_WAKE_OPTIONS=y
 # CONFIG_SENSORS_BMA250 is not set
 # CONFIG_SENSORS_BMA2X2 is not set
 # CONFIG_SENSORS_BMG160 is not set
