--- a/drivers/i2c/chips/Makefile
+++ b/drivers/i2c/chips/Makefile
@@ -38,4 +38,5 @@ EXTRA_CFLAGS += -DCONFIG_BMG_USE_PLATFORM_DATA
 ifeq ($(CONFIG_I2C_DEBUG_CHIP),y)
 EXTRA_CFLAGS += -DDEBUG
 endif
+EXTRA_CFLAGS += -Os
 
