--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -280,10 +280,20 @@ endif # NETWORK_FILESYSTEMS
 source "fs/nls/Kconfig"
 source "fs/dlm/Kconfig"
 
-config DYNAMIC_FSYNC
-	bool "dynamic file sync control"
-	default n
+config EXFAT_FS
+	tristate "exFAT file system support"
+	select NLS
 	help
-	  An experimental file sync control using Android's early suspend / late resume drivers
+	  exFAT is the interoperable file system of choice by Microsoft.
+
+config EXFAT_PATH
+	string "Tuxera EXFAT folder"
+	depends on EXFAT_FS
+	default "texfat"
+
+config EXFAT_VERSION
+	string "Tuxera EXFAT version"
+	depends on EXFAT_FS
+	default "target/htc.d/htc"
 
 endmenu
