--- a/fs/Makefile
+++ b/fs/Makefile
@@ -128,5 +128,4 @@ obj-$(CONFIG_PSTORE)		+= pstore/
 
 # Patched by YAFFS
 obj-$(CONFIG_YAFFS_FS)		+= yaffs2/
-
-obj-$(CONFIG_DYNAMIC_FSYNC)	+= dyn_sync_cntrl.o
+obj-$(CONFIG_HTC_FD_MONITOR)		+= fd_monitor.o
