--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -18,7 +18,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-gd6f147e"
+CONFIG_LOCALVERSION="-gfa33c1e"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -113,6 +113,9 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+# CONFIG_CC_OPTIMIZE_ALOT is not set
+# CONFIG_CC_OPTIMIZE_FAST is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -120,7 +123,7 @@ CONFIG_EXPERT=y
 CONFIG_UID16=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_KALLSYMS=y
-# CONFIG_KALLSYMS_ALL is not set
+CONFIG_KALLSYMS_ALL=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_PRINTK_CPU_ID=y
@@ -160,6 +163,7 @@ CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
@@ -181,7 +185,7 @@ CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 # CONFIG_MODULE_FORCE_UNLOAD is not set
-# CONFIG_MODVERSIONS is not set
+CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
@@ -218,11 +222,20 @@ CONFIG_EFI_PARTITION=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -352,10 +365,8 @@ CONFIG_MSM_RPM=y
 CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
-CONFIG_PERFLOCK=y
+# CONFIG_PERFLOCK is not set
 # CONFIG_DEBUG_KSWAPD is not set
-# CONFIG_PERFLOCK_FIX_UP is not set
-# CONFIG_PERFLOCK_BOOT_LOCK is not set
 
 #
 # MSM Board Selection
@@ -440,7 +451,13 @@ CONFIG_MSM_DSPS=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_MPDEC=y
+CONFIG_CMDLINE_OPTIONS=y
+CONFIG_MSM_MPDEC_INPUTBOOST_CPUMIN=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=384000
+CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -540,9 +557,8 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 # CONFIG_MACH_MONARUDO is not set
-# CONFIG_MACH_DELUXE_J is not set
-# CONFIG_MACH_IMPRESSION_J is not set
 CONFIG_MACH_M7_UL=y
+# CONFIG_MACH_M7_WLS is not set
 # CONFIG_QSC_MODEM is not set
 CONFIG_SUPPORT_USB_SPEAKER=y
 CONFIG_SENSE_4_PLUS=y
@@ -552,6 +568,7 @@ CONFIG_MSM_NONSMD_PACKET_FILTER=y
 CONFIG_HTC_POWEROFF_MODEM_IN_OFFMODE_CHARGING=y
 CONFIG_HTC_STORE_MODEM_RESET_INFO=y
 CONFIG_MSM_CPU_PWRCTL=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_QUALCOMM_WLAN_PXO is not set
 
 #
@@ -617,6 +634,7 @@ CONFIG_ARM_GIC=y
 # CONFIG_PCI_SYSCALL is not set
 CONFIG_ARCH_SUPPORTS_MSI=y
 # CONFIG_PCCARD is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 
 #
 # Kernel Features
@@ -713,19 +731,61 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
+CONFIG_QUAD_CORES_SOC_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSV2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+CONFIG_SMARTASSV2_SLEEP_IDEAL_FREQ=768000
+CONFIG_SMARTASSV2_AWAKE_IDEAL_FREQ=192000
+CONFIG_SMARTASSV2_RAMP_UP_STEP=256000
+CONFIG_SMARTASSV2_RAMP_DOWN_STEP=256000
+CONFIG_SMARTASSV2_MAX_CPU_LOAD=50
+CONFIG_SMARTASSV2_MIN_CPU_LOAD=25
+CONFIG_SMARTASSV2_UP_RATE_US=48000
+CONFIG_SMARTASSV2_DOWN_RATE_US=99000
+CONFIG_SMARTASSV2_SLEEP_WAKEUP_FREQ=99999999
+CONFIG_SMARTASSV2_SAMPLE_RATE_JIFFIES=2
+CONFIG_CPU_FREQ_GOV_BADASS=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
+CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
+CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS=y
+# CONFIG_CPU_FREQ_GOV_INTERACTIVEX2 is not set
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=50
+CONFIG_LAGFREE_MIN_LOAD=15
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
+CONFIG_INTELLI_MAX_INACTIVE_FREQ=1134000
+# CONFIG_CPUFREQ_LIMIT_MAX_FREQ is not set
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 
 #
 # ARM CPU frequency scaling drivers
@@ -1411,7 +1471,7 @@ CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_CRYPT=m
+CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
 # CONFIG_DM_MIRROR is not set
@@ -1724,6 +1784,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C_QC is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
+CONFIG_SYNAPTICS_LOGO2MENU=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
 # CONFIG_TOUCHSCREEN_MAX11871 is not set
 # CONFIG_TOUCHSCREEN_MAX1187X is not set
 CONFIG_INPUT_MISC=y
@@ -1781,6 +1843,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2777,6 +2840,7 @@ CONFIG_SND_SOC_WCD9304=y
 CONFIG_SND_SOC_WCD9310=y
 CONFIG_SND_SOC_CS8427=y
 CONFIG_SND_SOC_MSM_STUB=y
+CONFIG_SOUND_CONTROL_HAX_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -3289,7 +3353,11 @@ CONFIG_STAGING=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZCACHE is not set
 CONFIG_QCACHE=y
+CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -3321,6 +3389,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_ANDROID_INTF_ALARM_DEV is not set
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
+CONFIG_CPUPOWER=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3358,6 +3427,7 @@ CONFIG_IOMMU_PGTABLES_L2=y
 #
 # File systems
 #
+CONFIG_DCACHE_WORD_ACCESS=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
@@ -3502,7 +3572,9 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 # CONFIG_NLS_UTF8 is not set
-# CONFIG_EXFAT_FS is not set
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_PATH="texfat"
+CONFIG_EXFAT_VERSION="target/htc.d/htc"
 
 #
 # Kernel hacking
@@ -3707,6 +3779,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA256=y
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
@@ -3716,6 +3789,7 @@ CONFIG_CRYPTO_SHA256=y
 # Ciphers
 #
 CONFIG_CRYPTO_AES=y
+CONFIG_CRYPTO_AES_ARM=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
@@ -3747,9 +3821,9 @@ CONFIG_CRYPTO_ANSI_CPRNG=m
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE40=y
-CONFIG_CRYPTO_DEV_QCRYPTO=m
-CONFIG_CRYPTO_DEV_QCE=m
-CONFIG_CRYPTO_DEV_QCEDEV=m
+CONFIG_CRYPTO_DEV_QCRYPTO=y
+CONFIG_CRYPTO_DEV_QCE=y
+CONFIG_CRYPTO_DEV_QCEDEV=y
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
 CONFIG_BINARY_PRINTF=y
 
@@ -3757,6 +3831,8 @@ CONFIG_BINARY_PRINTF=y
 # Library routines
 #
 CONFIG_BITREVERSE=y
+CONFIG_GENERIC_STRNLEN_USER=y
+CONFIG_GENERIC_STRNCPY_FROM_USER=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
