--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -2621,6 +2621,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_CABC is not set
 # CONFIG_FB_MSM_BACKLIGHT is not set
 # CONFIG_FB_MSM_LOGO is not set
+CONFIG_UPDATE_LCDC_LUT=y
 CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_FB_MSM_MDP_HW=y
