--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -56,6 +56,10 @@ config FB_MSM_LOGO
 	---help---
 	  Show /initlogo.rle during boot.
 
+config UPDATE_LCDC_LUT
+	bool
+	default y
+
 config FB_MSM_LCDC_HW
 	bool
 	default n
